--- a/index.html
+++ b/index.html
@@ -1,2 +1,51 @@
-<h1/1> hello world <h/1>
-<h1/1> let's make the world wonderful <h/1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>无标题文档</title>
+</head>
+
+<body>
+<p><a href="www.semiduck.com"><img src="images/logo(semiduck).jpg" width="108" height="108" longdesc="http://semiduck.com" /></a>产品服务			物流跟踪 行业动态 在线询价 关于我们</p>
+<p>Semiduck 智慧物流引领着</p>
+<p>轻量化物流 将您的物流服务从线下转移到线上 按需定制</p>
+<p>轻松订舱、追踪、管理您的货物</p>
+<p>&nbsp;</p>
+<p>集装箱 Every week new rates</p>
+<p>海陆运输 100%secure for all orders</p>
+<p>在线服务 24×7 we care your experiences</p>
+<p>资金服务 100% Secure payment method</p>
+<p>简化物流的解决方案</p>
+<p>数字化物流让您的货运更加简洁搞笑，全程掌握货运动向</p>
+<p>海洋运输</p>
+<p>货物的顺畅运输，自此开启！</p>
+<p>内陆运输</p>
+<p>结合本地专长与庞大的多式联运网络，为您提供高效切直接的物流体验。</p>
+<p>供应链服务</p>
+<p>以强大的通关能力为依托，提供超过11项跨境贸易服务项目。</p>
+<p>数字化解决方案</p>
+<p>行业领先的在线工具将让您的物流简单又透明。</p>
+<p>以物流成功，推动社会进步！</p>
+<p>覆盖全球300多个港口</p>
+<p>您可能是制造商，要将您的货物销售给国外的客户，或是小企业主，分销和供应产品给其他公司，这里可以找到关于不同航线所有问题的答案</p>
+<p>公司介绍</p>
+<p>关于我们</p>
+<p>组织架构</p>
+<p>公司愿景</p>
+<p>企业荣誉</p>
+<p>企业智库</p>
+<p>物流知识</p>
+<p>项目流程</p>
+<p>行业案例</p>
+<p>关务咨询</p>
+<p>友情链接</p>
+<p>中国海关单一窗口</p>
+<p>中华人民共和国商务部</p>
+<p>联系方式</p>
+<p>赵佳力&nbsp;022-5995 3188 13920592850</p>
+<p>天津市河西区陈塘庄街道中交富力大厦1001</p>
+<p>Copyright©2021 semiduck Inc. 半鸭供应链版权所有</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+</body>
+</html>
