--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p><a href="www.semiduck.com"><img src="images/logo(semiduck).jpg" width="108" height="108" longdesc="http://www.semiduck.com" /></a>产品服务			物流跟踪 行业动态 在线询价 关于我们</p>
+<p><a href="www.semiduck.com"><img src="images/logo(semiduck).jpg" width="108" height="108" longdesc="index.html" /></a>产品服务			物流跟踪 行业动态 在线询价 关于我们</p>
 <p>Semiduck 智慧物流引领着</p>
 <p>轻量化物流 将您的物流服务从线下转移到线上 按需定制</p>
 <p>轻松订舱、追踪、管理您的货物</p>
