--- a/index.html
+++ b/index.html
@@ -3,49 +3,186 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
+<style type="text/css">
+#top {
+	height: 86px;
+	width: 886px;
+}
+#mid {
+	height: auto;
+	width: 886px;
+}
+#bottom {
+	height: auto;
+	width: 884px;
+}
+#top_left {
+	height: 86px;
+	width: 86px;
+	float: left;
+}
+#top_right {
+	float: right;
+	height: 86px;
+	width: 794px;
+}
+#mid h2 {
+	font-family: "Courier New", Courier, monospace;
+}
+#bottom p {
+	font-size: 9px;
+}
+</style>
+<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+<link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<p><a href="index.html"><img src="images/logo(semiduck).jpg" width="60" height="60" longdesc="http://semiduck.com" /></a>产品服务			物流跟踪 行业动态 在线询价 关于我们</p>
-<p>Semiduck 智慧物流引领着</p>
-<p>轻量化物流 将您的物流服务从线下转移到线上 按需定制</p>
-<p>轻松订舱、追踪、管理您的货物</p>
-<p>&nbsp;</p>
-<p>集装箱 Every week new rates</p>
-<p>海陆运输 100%secure for all orders</p>
-<p>在线服务 24×7 we care your experiences</p>
-<p>资金服务 100% Secure payment method</p>
-<p>简化物流的解决方案</p>
-<p>数字化物流让您的货运更加简洁搞笑，全程掌握货运动向</p>
-<p>海洋运输</p>
-<p>货物的顺畅运输，自此开启！</p>
-<p>内陆运输</p>
-<p>结合本地专长与庞大的多式联运网络，为您提供高效切直接的物流体验。</p>
-<p>供应链服务</p>
-<p>以强大的通关能力为依托，提供超过11项跨境贸易服务项目。</p>
-<p>数字化解决方案</p>
-<p>行业领先的在线工具将让您的物流简单又透明。</p>
-<p>以物流成功，推动社会进步！</p>
-<p>覆盖全球300多个港口</p>
-<p>您可能是制造商，要将您的货物销售给国外的客户，或是小企业主，分销和供应产品给其他公司，这里可以找到关于不同航线所有问题的答案</p>
-<p>公司介绍</p>
-<p>关于我们</p>
-<p>组织架构</p>
-<p>公司愿景</p>
-<p>企业荣誉</p>
-<p>企业智库</p>
-<p>物流知识</p>
-<p>项目流程</p>
-<p>行业案例</p>
-<p>关务咨询</p>
-<p>友情链接</p>
-<p>中国海关单一窗口</p>
-<p>中华人民共和国商务部</p>
-<p>联系方式</p>
-<p>赵佳力&nbsp;022-5995 3188 13920592850</p>
-<p>天津市河西区陈塘庄街道中交富力大厦1001</p>
-<p>Copyright©2021 semiduck Inc. 半鸭供应链版权所有</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<div id="top">
+  <div id="top_left"><a href="#" target="_self"><img src="images/logo(semiduck).jpg" alt="semiduck" name="top_logo" width="80" height="80" hspace="1" vspace="1" id="top_logo" /></a></div>
+  <div id="top_right">
+    <ul id="MenuBar1" class="MenuBarHorizontal">
+      <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
+        <ul>
+          <li><a href="#">国际运输</a></li>
+          <li><a href="#">国内运输</a></li>
+          <li><a href="#">仓储包装</a></li>
+          <li><a href="#">跨境电商</a></li>
+          <li><a href="#">关务咨询</a></li>
+        </ul>
+      </li>
+      <li><a href="#">物流跟踪</a></li>
+      <li><a class="MenuBarItemSubmenu" href="#">物流智库</a>
+        <ul>
+          <li><a class="MenuBarItemSubmenu" href="#">物流知识</a>
+            <ul>
+<li><a href="#">汽车及工业制造</a></li>
+<li><a href="#">化工物流</a></li>
+<li><a href="#">跨境电商</a></li>
+<li><a href="#">项目物流</a></li>
+<li><a href="#">物流杂谈</a></li>
+            </ul>
+          </li>
+          <li><a href="#">项目流程</a></li>
+          <li><a href="#">行业案例</a></li>
+          <li><a href="#">关务咨询</a></li>
+        </ul>
+      </li>
+      <li><a href="#" class="MenuBarItemSubmenu">在线询价</a>
+        <ul>
+          <li><a href="#">集装箱运价</a></li>
+          <li><a href="#">散杂船期</a></li>
+          <li><a href="#">滚装船期</a></li>
+        </ul>
+      </li>
+      <li><a href="#" class="MenuBarItemSubmenu">关于我们</a>
+        <ul>
+          <li><a href="#">公司介绍</a></li>
+          <li><a href="#">组织架构</a></li>
+          <li><a href="#">愿景使命</a></li>
+          <li><a href="#">企业荣誉</a></li>
+          <li><a href="#">联系我们</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+</div>
+<div id="mid">
+  <table width="884" height="189" border="0">
+    <tr>
+      <td width="253">Semiduck 智慧物流引领者</td>
+      <td width="177">&nbsp;</td>
+      <td width="215">&nbsp;</td>
+      <td width="211">&nbsp;</td>
+    </tr>
+    <tr>
+      <td height="105" colspan="2">轻量化物流        将您的物流服务从线下转移到线上      按需定制  轻松订舱、追踪、管理您的货物</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>集装箱      <br />
+      Every week new rates</td>
+      <td>海陆运输      <br />
+      100%secure for all orders</td>
+      <td>在线服务      <br />
+      24×7 we care your experiences</td>
+      <td>资金服务      <br />
+      100% Secure payment method</td>
+    </tr>
+  </table>
+  <table width="884" border="0">
+    <tr>
+      <td width="203" height="46">简化物流的解决方案<br />
+      数字化物流让您的货运更加简洁高效, 全程掌握货运动向</td>
+      <td width="260">&nbsp;</td>
+      <td width="219">&nbsp;</td>
+      <td width="174">&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td><p>海洋运输<br />
+      货物的顺畅运输，自此开启！</p></td>
+      <td><p>内陆运输<br />
+      结合本地专长与庞大的多式联运网络，为您提供高效切直接的物流体验。</p></td>
+      <td><p>供应链服务<br />
+      以强大的通关能力为依托，提供超过11项跨境贸易服务项目。</p></td>
+      <td><p>数字化解决方案<br />
+      行业领先的在线工具将让您的物流简单又透明。</p></td>
+    </tr>
+  </table>
+  <p>覆盖全球300多个港口</p>
+  <p>您可能是制造商，要将您的货物销售给国外的客户，或是小企业主，分销和供应产品给其他公司，这里可以找到关于不同航线所有问题的答案</p>
+</div>
+<div id="bottom">公司介绍
+  <table width="884" border="0">
+    <tr>
+      <td width="77">公司介绍</td>
+      <td width="91">企业智库</td>
+      <td width="254">友情链接</td>
+      <td width="434">联系方式</td>
+    </tr>
+    <tr>
+      <td>组织架构</td>
+      <td>物流知识</td>
+      <td>中国海关单一窗口</td>
+      <td>赵佳力</td>
+    </tr>
+    <tr>
+      <td>使命愿景</td>
+      <td>项目流程</td>
+      <td>中华人民共和国商务部</td>
+      <td>022-59953188</td>
+    </tr>
+    <tr>
+      <td>企业荣誉</td>
+      <td>行业案例</td>
+      <td>中国国际贸易促进委员会</td>
+      <td>13920592850</td>
+    </tr>
+    <tr>
+      <td>关于我们</td>
+      <td>关务咨询</td>
+      <td>&nbsp;</td>
+      <td>天津市河西区陈塘庄街道中交富力大厦1001室</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>关注我们</td>
+    </tr>
+  </table>
+&nbsp;
+<p>Copyright © 2021 semiduck Inc. 半鸭（天津）供应链管理有限公司版权所有|Design by Semiduck</p>
+</div>
+<script type="text/javascript">
+var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+</script>
 </body>
 </html>
