--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>semiduck</title>
 <style type="text/css">
 #top {
 	height: 86px;
@@ -42,6 +42,11 @@
   <div id="top_left"><a href="#" target="_self"><img src="images/logo(semiduck).jpg" alt="semiduck" name="top_logo" width="80" height="80" hspace="1" vspace="1" id="top_logo" /></a></div>
   <div id="top_right">
     <ul id="MenuBar1" class="MenuBarHorizontal">
+      <style>
+	.hiddenmenu{
+		display: none;
+	}
+      </style>
       <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
         <ul>
           <li><a href="#">国际运输</a></li>
