--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	}
       </style>
       <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
-        <ul>
+        <ul class="hiddenmenu">
           <li><a href="#">国际运输</a></li>
           <li><a href="#">国内运输</a></li>
           <li><a href="#">仓储包装</a></li>
