--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	}
       </style>
       <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
-	<div class="hiddenmenu">"
+	<div class="hiddenmenu">
         <ul>
           <li><a href="#">国际运输</a></li>
           <li><a href="#">国内运输</a></li>
@@ -60,6 +60,7 @@
       </li>
       <li><a href="#">物流跟踪</a></li>
       <li><a class="MenuBarItemSubmenu" href="#">物流智库</a>
+	<div class="hiddenmenu">
         <ul>
           <li><a class="MenuBarItemSubmenu" href="#">物流知识</a>
             <ul>
@@ -75,21 +76,26 @@
           <li><a href="#">关务咨询</a></li>
         </ul>
       </li>
+      </div>
       <li><a href="#" class="MenuBarItemSubmenu">在线询价</a>
-        <ul>
+        <div class="hiddenmenu">
+	<ul>
           <li><a href="#">集装箱运价</a></li>
           <li><a href="#">散杂船期</a></li>
           <li><a href="#">滚装船期</a></li>
         </ul>
+	</div>
       </li>
       <li><a href="#" class="MenuBarItemSubmenu">关于我们</a>
-        <ul>
+        <div class="hiddenmenu">
+	<ul>
           <li><a href="#">公司介绍</a></li>
           <li><a href="#">组织架构</a></li>
           <li><a href="#">愿景使命</a></li>
           <li><a href="#">企业荣誉</a></li>
           <li><a href="#">联系我们</a></li>
         </ul>
+	</div>
       </li>
     </ul>
   </div>
