--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </style>
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
+<.hiddenmenu{display:none;}>
 </head>
 
 <body>
@@ -42,12 +43,7 @@
   <div id="top_left"><a href="#" target="_self"><img src="images/logo(semiduck).jpg" alt="semiduck" name="top_logo" width="80" height="80" hspace="1" vspace="1" id="top_logo" /></a></div>
   <div id="top_right">
     <ul id="MenuBar1" class="MenuBarHorizontal">
-      <style>
-	.hiddenmenu{
-		display: none;
-	}
-      </style>
-      <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
+       <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
 	<div class="hiddenmenu">
         <ul>
           <li><a href="#">国际运输</a></li>
