--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="top">
   <div id="top_left"><a href="#" target="_self"><img src="images/logo(semiduck).jpg" alt="semiduck" name="top_logo" width="80" height="80" hspace="1" vspace="1" id="top_logo" /></a></div>
   <div id="top_right">
-    <ul id="MenuBar1" class="MenuBarHorizontal">
+    <ul id="MenuBar" class="MenuBarHorizontal">
        <li><a class="MenuBarItemSubmenu" href="#">产品服务</a>
 	<div class="hiddenmenu">
         <ul>
