--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </style>
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
-<.hiddenmenu{display:none;}>
+<.hiddenmenu{
+	display:none;}>
 </head>
 
 <body>
