--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta name="baidu-site-verification" content="codeva-tkDsO4pRK6" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Semiduck 智慧物流引领者">
+<meta name="keywords" content="SEMIDUCK, 半鸭,国际物流,国际货代,多式联运平台,供应链管理,天津港,物流,仓储,集装箱运输,international logistics,international forwarder,scm,supply chain management,tianjing port,logistics,warehouse,container transport">
+<title>半鸭供应链</title>
 <style type="text/css">
 #top {
 	height: 86px;
