--- a/index.html
+++ b/index.html
@@ -187,6 +187,21 @@
 <p>Copyright © 2021 semiduck Inc. 半鸭（天津）供应链管理有限公司版权所有|Design by Semiduck</p>
 </div>
 <script type="text/javascript">
+<script src="https://zz.bdstatic.com/linksubmit/push.js"></script>
+<script>
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https') {
+        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+    }
+    else {
+        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+    }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
+</script>
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
 </body>
