--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Semiduck 智慧物流引领者">
-<meta name="keywords" content="SEMIDUCK, 半鸭,国际物流,国际货代,多式联运平台,供应链管理,天津港,物流,仓储,集装箱运输,international logistics,international forwarder,scm,supply chain management,tianjing port,logistics,warehouse,container transport">
+<meta name="keywords" content="SEMIDUCK, 半鸭,天津物流,天津货代,多式联运平台,供应链管理,天津港,物流,仓储,集装箱运输,international logistics,international forwarder,scm,supply chain management,tianjing port,logistics,warehouse,container transport">
 <title>半鸭供应链</title>
 <style type="text/css">
 #top {
