--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Semiduck 智慧物流引领者">
 <meta name="keywords" content="SEMIDUCK, 半鸭,天津物流,天津货代,多式联运平台,供应链管理,天津港,物流,仓储,集装箱运输,international logistics,tianjin,international forwarder,scm,supply chain management,tianjing port,logistics,warehouse,container transport">
-<title>半鸭供应链</title>
+<title>半鸭（天津）供应链管理有限公司 官网</title>
 <style type="text/css">
 #top {
 	height: 86px;
