--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta name="baidu-site-verification" content="codeva-tkDsO4pRK6" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Semiduck 智慧物流引领者">
-<meta name="keywords" content="SEMIDUCK, 半鸭,天津物流,天津货代,多式联运平台,供应链管理,天津港,物流,仓储,集装箱运输,international logistics,tianjin,international forwarder,scm,supply chain management,tianjing port,logistics,warehouse,container transport">
-<title>半鸭（天津）供应链管理有限公司 官网</title>
-	
+<meta name="keywords" content="SEMIDUCK, 半鸭,国际物流,国际货代,多式联运平台,供应链管理,天津港,物流,仓储,集装箱运输,international logistics,international forwarder,scm,supply chain management,tianjing port,logistics,warehouse,container transport">
+<title>半鸭供应链</title>
+
 <style type="text/css">
 #top {
 	height: 86px;
 	width: 886px;
 }
 #mid {
-	height: auto;
+	height: 170px;
 	width: 886px;
+	background-attachment: scroll;
+	background-repeat: no-repeat;
+	background-position: right center;
+	line-height: 25px;
+	bottom: 25px;
+	background-image: url(images/head.png);
+	color: #000;
+	font-style: normal;
+	font-size: 18px;
+	font-weight: normal;
+	font-family: "小米兰亭";
 }
 #bottom {
 	height: auto;
-	width: 884px;
+	width: 886px;
+	position: relative;
+	z-index: auto;
+	top: 15px;
 }
 #top_left {
 	height: 86px;
@@ -33,14 +49,152 @@
 	font-family: "Courier New", Courier, monospace;
 }
 #bottom p {
+	font-size: 15px;
+}
+#mid3_02 {
+	position: relative;
+	left: 5px;
+}
+#mid3_03 {
+	left: 5px;
+	position: relative;
+}
+#mid3_01 {
+	position: relative;
+	left: 5px;
+	top: 5;
+}
+#mid3_04 {
+	position: relative;
+	left: 5px;
+}
+#table2 {
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+}
+#table2_11 img {
+}
+#table2_12 img {
+}
+#table2_13 {
+	border: thin none #999;
+}
+#table2_12 {
+	border-top-width: thin;
+	border-right-width: thin;
+	border-bottom-width: thin;
+	border-left-width: thin;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: ridge;
+	border-left-style: none;
+	border-top-color: #999;
+	border-right-color: #999;
+	border-bottom-color: #999;
+	border-left-color: #999;
+}
+#table2_42 {
+	border-top-width: thin;
+	border-right-width: thin;
+	border-bottom-width: thin;
+	border-left-width: thin;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: ridge;
+	border-left-style: none;
+	border-top-color: #999;
+	border-right-color: #999;
+	border-bottom-color: #999;
+	border-left-color: #999;
+}
+#bottom table tr td blockquote p #imageField {
+	position: relative;
+	left: -5px;
+}
+#copyright {
 	font-size: 9px;
+	height: auto;
+	width: 886px;
+}
+#table2_22 {
+	border-top-width: medium;
+	border-right-width: medium;
+	border-bottom-width: thin;
+	border-left-width: medium;
+	border-bottom-style: ridge;
+	border-top-color: #999;
+	border-right-color: #999;
+	border-bottom-color: #999;
+	border-left-color: #999;
+}
+#table2_32 {
+	border-top-width: thin;
+	border-right-width: thin;
+	border-bottom-width: thin;
+	border-left-width: thin;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: ridge;
+	border-left-style: none;
+	border-top-color: #999;
+	border-right-color: #999;
+	border-bottom-color: #999;
+	border-left-color: #999;
 }
 </style>
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
+<style type="text/css">
+
+#mid1 table {
+	text-align: center;
+	color: #777779;
+}
+#mid4 {
+	background-color: #39C;
+	height: auto;
+	width: 886px;
+	position: relative;
+	top: 15px;
+	bottom: 10px;
+	left: 0px;
+	right: 0px;
+	cursor: auto;
+}
+#mid1 {
+	height: auto;
+	width: 886px;
+	position: relative;
+	top: 0px;
+	bottom: 25px;
+}
+#mid2 {
+	height: auto;
+	width: 886px;
+	top: 10px;
+	bottom: 25px;
+	position: relative;
+	line-height: 25px;
+	background-color: #FFF;
+}
+#mid3 {
+	height: auto;
+	width: 886px;
+	position: relative;
+	z-index: 0;
+	text-align: left;
+	top: 15px;
+}
+body {
+	background-image: url(images/%E7%AE%80%E5%8C%96%E7%89%A9%E6%B5%81%E6%96%B9%E6%A1%881.png);
+	background-repeat: no-repeat;
+}
+</style>
 </head>
 
-<body>
+<body background="images/%E7%AE%80%E5%8C%96%E7%89%A9%E6%B5%81%E6%96%B9%E6%A1%881.png">
 <div id="top">
   <div id="top_left"><a href="#" target="_self"><img src="images/logo(semiduck).jpg" alt="semiduck" name="top_logo" width="80" height="80" hspace="1" vspace="1" id="top_logo" /></a></div>
   <div id="top_right">
@@ -91,116 +245,137 @@
   </div>
 </div>
 <div id="mid">
-  <table width="884" height="189" border="0">
-    <tr>
-      <td width="253">Semiduck 智慧物流引领者</td>
-      <td width="177">&nbsp;</td>
-      <td width="215">&nbsp;</td>
-      <td width="211">&nbsp;</td>
-    </tr>
-    <tr>
-      <td height="105" colspan="2">轻量化物流        将您的物流服务从线下转移到线上      按需定制  轻松订舱、追踪、管理您的货物</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>集装箱      <br />
-      Every week new rates</td>
-      <td>海陆运输      <br />
-      100%secure for all orders</td>
-      <td>在线服务      <br />
-      24×7 we care your experiences</td>
-      <td>资金服务      <br />
-      100% Secure payment method</td>
-    </tr>
-  </table>
-  <table width="884" border="0">
-    <tr>
-      <td width="203" height="46">简化物流的解决方案<br />
-      数字化物流让您的货运更加简洁高效, 全程掌握货运动向</td>
-      <td width="260">&nbsp;</td>
-      <td width="219">&nbsp;</td>
-      <td width="174">&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td><p>海洋运输<br />
-      货物的顺畅运输，自此开启！</p></td>
-      <td><p>内陆运输<br />
-      结合本地专长与庞大的多式联运网络，为您提供高效切直接的物流体验。</p></td>
-      <td><p>供应链服务<br />
-      以强大的通关能力为依托，提供超过11项跨境贸易服务项目。</p></td>
-      <td><p>数字化解决方案<br />
-      行业领先的在线工具将让您的物流简单又透明。</p></td>
-    </tr>
-  </table>
-  <p>覆盖全球300多个港口</p>
-  <p>您可能是制造商，要将您的货物销售给国外的客户，或是小企业主，分销和供应产品给其他公司，这里可以找到关于不同航线所有问题的答案</p>
+  <p>&nbsp; </p>
+  <p>&nbsp; Semiduck 智慧物流引领者</p>
+  <p>&nbsp; 轻量化物流&nbsp;&nbsp;&nbsp; 将您的物流服务从线下转移到线上<br />
+ &nbsp; 按需定制&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; 轻松订舱、追踪、管理您的货物</p>
 </div>
-<div id="bottom">公司介绍
-  <table width="884" border="0">
+<div id="mid1">
+  <table width="886" border="0" id="table1">
     <tr>
-      <td width="77">公司介绍</td>
-      <td width="91">企业智库</td>
-      <td width="254">友情链接</td>
-      <td width="434">联系方式</td>
-    </tr>
-    <tr>
-      <td>组织架构</td>
-      <td>物流知识</td>
-      <td>中国海关单一窗口</td>
-      <td>赵佳力</td>
-    </tr>
-    <tr>
-      <td>使命愿景</td>
-      <td>项目流程</td>
-      <td>中华人民共和国商务部</td>
-      <td>022-59953188</td>
-    </tr>
-    <tr>
-      <td>企业荣誉</td>
-      <td>行业案例</td>
-      <td>中国国际贸易促进委员会</td>
-      <td>13920592850</td>
-    </tr>
-    <tr>
-      <td>关于我们</td>
-      <td>关务咨询</td>
-      <td>&nbsp;</td>
-      <td>天津市河西区陈塘庄街道中交富力大厦1001室</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>关注我们</td>
+      <td>集装箱 <br />
+        Every week new rates</td>
+      <td>海陆运输 <br />
+        100%secure for all orders</td>
+      <td>在线服务 <br />
+        24×7 we care your experiences</td>
+      <td>资金服务 <br />
+        100% Secure payment method</td>
     </tr>
   </table>
-&nbsp;
-<p>Copyright © 2021 semiduck Inc. 半鸭（天津）供应链管理有限公司版权所有|Design by Semiduck</p>
 </div>
+<div id="mid2">&nbsp; 简化物流的解决方案<br />
+  &nbsp; 数字化物流让您的货运更加简洁高效, 全程掌握货运动向！
+</div>
+<div id="mid3">
+  <table border="0" cellpadding="1" cellspacing="6" id="table2">
+    <tr class="MenuBarActive">
+      <td width="221" height="155" align="center" valign="middle" bgcolor="#FFFFFF" id="table2_11"><img src="images/pic_cntr.png" width="210" height="133" alt="pic_cntr" /></td>
+      <td width="221" align="center" valign="middle" ><img src="images/pic_truck.png" width="210" height="133" alt="pic_truck" /></td>
+      <td width="221" align="center" valign="middle"><img src="images/pic_port.png" width="210" height="133" alt="pic_port" /></td>
+      <td width="221" align="center" valign="middle"><img src="images/pic_hub.png" width="210" height="133" alt="pic_hub" /></td>
+    </tr>
+    <tr>
+      <td height="21" valign="top" id="table2_12">&nbsp;海洋运输</td>
+      <td valign="top" id="table2_22">&nbsp;内陆运输</td>
+      <td valign="top" id="table2_32">&nbsp;供应链服务</td>
+      <td valign="top" id="table2_42">&nbsp;数字化解决方案</td>
+    </tr>
+    <tr>
+      <td width="221" valign="top" id="table2_13"><div align="left" id="mid3_01">
+        <p>货物的顺畅运输，自此开启</p>
+</div></td>
+      <td width="221" valign="top"><div align="left" id="mid3_02">
+        <p>结合本地专长与庞大的多式联&nbsp; 运网络，为您提供高效切直接的物流体验。</p>
+</div></td>
+      <td width="221" valign="top"><div align="left" id="mid3_03">
+        <p>以强大的通关能力为依托，提供超过11项跨境贸易服务项目</p>
+</div></td>
+      <td width="221" valign="top"><div align="left" id="mid3_04">
+        <p>行业领先的在线工具将让您的物流简单又透明。</p>
+</div></td>
+    </tr>
+  </table>
+</div>
+<div id="mid4">
+  <p align="center"><br />
+  覆盖全球300多个港口</p>
+  <p align="center">&nbsp;您可能是制造商，要将您的货物销售给国外的客户，或是小企业主，分销和供应产品给其他公司，这里可以找到关于不同航线所有问题的答案<br />
+    <br />
+  </p>
+</div>
+<div id="bottom">
+  <table width="886" border="0" align="center">
+    <tr>
+      <td width="221" align="center">&nbsp;公司介绍
+        <div align="center"></div></td>
+      <td width="221" align="center">&nbsp;企业智库
+        <div align="center"></div></td>
+      <td width="300" align="center">&nbsp;友情链接
+        <div align="center"></div></td>
+      <td width="400" align="center" valign="middle">联系方式</td>
+    </tr>
+    <tr>
+      <td width="221" align="center">&nbsp;组织架构
+        <div align="center"></div></td>
+      <td width="221" align="center">&nbsp;物流知识
+        <div align="center"></div></td>
+      <td width="300" align="center">&nbsp;中国海关单一窗口
+        <div align="center"></div></td>
+      <td width="400"><blockquote>
+        <p>联系人：赵佳力</p>
+      </blockquote></td>
+    </tr>
+    <tr>
+      <td width="221" align="center">&nbsp;使命愿景
+        <div align="center"></div></td>
+      <td width="221" align="center">&nbsp;项目流程
+        <div align="center"></div></td>
+      <td width="300" align="center">&nbsp;中华人民共和国商务部
+        <div align="center"></div></td>
+      <td width="400"><blockquote>
+        <p>座机：022-59953188</p>
+      </blockquote></td>
+    </tr>
+    <tr>
+      <td width="221" align="center">&nbsp;企业荣誉
+        <div align="center"></div></td>
+      <td width="221" align="center">&nbsp;行业案例
+        <div align="center"></div></td>
+      <td width="300" align="center" nowrap="nowrap">&nbsp;中国国际贸易促进委员会
+        <div align="center"></div></td>
+      <td width="400"><blockquote>
+        <p>手机：13920592850</p>
+      </blockquote></td>
+    </tr>
+    <tr>
+      <td width="221" align="center">&nbsp;关于我们
+        <div align="center"></div></td>
+      <td width="221" align="center">&nbsp;关务咨询
+        <div align="center"></div></td>
+      <td width="300">&nbsp;</td>
+      <td width="400" nowrap="nowrap"><blockquote>
+        <p>地址：天津市河西区陈塘庄街道中交富力大厦1001室</p>
+      </blockquote></td>
+    </tr>
+    <tr>
+      <td width="221">&nbsp;</td>
+      <td width="221">&nbsp;</td>
+      <td width="300">&nbsp;</td>
+      <td width="400"><blockquote>
+        <p>关注我们</p>
+        <p>
+          <input type="image" name="imageField" id="imageField" src="images/qrcode_for_gh_b25e9530aec6_1280.jpg" />
+          <input type="image" name="imageField2" id="imageField2" src="images/douyin.jpg" />
+        </p>
+      </blockquote>
+        <p>&nbsp;</p></td>
+    </tr>
+  </table>
+</div>
+<div id="copyright">&nbsp;Copyright © 2021 semiduck Inc. 半鸭（天津）供应链管理有限公司版权所有|Design by Semiduck </div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
-<script src="https://zz.bdstatic.com/linksubmit/push.js"></script>
-	<script>
-		(function(){
-    			var bp = document.createElement('script');
-    			var curProtocol = window.location.protocol.split(':')[0];
-    			if (curProtocol === 'https') {
-        			bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-    				}
-   			else {
-       				 bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-   				 }
-   			var s = document.getElementsByTagName("script")[0];
-   				 s.parentNode.insertBefore(bp, s);
-				})();
-	</script>
 </body>
 </html>
