--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ body {
         <div align="center"></div></td>
       <td width="221" align="center">&nbsp;物流知识
         <div align="center"></div></td>
-      <td width="300" align="center">&nbsp;<a href="https://app.singlewindow.cn/cas/login?service=https%3A//www.singlewindow.cn/sw/login.swdo">中国海关单一窗口</a>        <div align="center"></div></td>
+      <td width="300" align="center">&nbsp;<a href="https://app.singlewindow.cn/cas/login?service=https%3A//www.singlewindow.cn/sw/login.swdo" target="_new">中国海关单一窗口</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
         <p>联系人：赵佳力</p>
       </blockquote></td>
@@ -334,7 +334,7 @@ body {
         <div align="center"></div></td>
       <td width="221" align="center">&nbsp;项目流程
         <div align="center"></div></td>
-      <td width="300" align="center">&nbsp;<a href="http://www.mofcom.gov.cn/">中华人民共和国商务部</a>        <div align="center"></div></td>
+      <td width="300" align="center">&nbsp;<a href="http://www.mofcom.gov.cn/" target="_new">中华人民共和国商务部</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
         <p>座机：022-59953188</p>
       </blockquote></td>
@@ -344,7 +344,7 @@ body {
         <div align="center"></div></td>
       <td width="221" align="center">&nbsp;行业案例
         <div align="center"></div></td>
-      <td width="300" align="center" nowrap="nowrap">&nbsp;<a href="https://www.ccpit.org/">中国国际贸易促进委员会</a>        <div align="center"></div></td>
+      <td width="300" align="center" nowrap="nowrap">&nbsp;<a href="https://www.ccpit.org/" target="_new">中国国际贸易促进委员会</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
         <p>手机：13920592850</p>
       </blockquote></td>
