--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ body {
         <div align="center"></div></td>
       <td width="300" align="center">&nbsp;<a href="https://app.singlewindow.cn/cas/login?service=https%3A//www.singlewindow.cn/sw/login.swdo" target="_new">中国海关单一窗口</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
-        <p>联系人：赵佳力</p>
+        <p></p>
       </blockquote></td>
     </tr>
     <tr>
@@ -336,7 +336,7 @@ body {
         <div align="center"></div></td>
       <td width="300" align="center">&nbsp;<a href="http://www.mofcom.gov.cn/" target="_new">中华人民共和国商务部</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
-        <p>座机：022-59953188</p>
+        <p>联系电话：022-59953188</p>
       </blockquote></td>
     </tr>
     <tr>
@@ -346,7 +346,7 @@ body {
         <div align="center"></div></td>
       <td width="300" align="center" nowrap="nowrap">&nbsp;<a href="https://www.ccpit.org/" target="_new">中国国际贸易促进委员会</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
-        <p>手机：13920592850</p>
+        <p>邮箱：Alexzhao@semiduck.com</p>
       </blockquote></td>
     </tr>
     <tr>
