--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ body {
         <div align="center"></div></td>
       <td width="300" align="center" nowrap="nowrap">&nbsp;<a href="https://www.ccpit.org/" target="_new">中国国际贸易促进委员会</a>        <div align="center"></div></td>
       <td width="400"><blockquote>
-        <p>邮箱：Alexzhao@semiduck.com</p>
+        <p>邮箱：info@semiduck.com</p>
       </blockquote></td>
     </tr>
     <tr>
