--- a/seatable.html
+++ b/seatable.html
@@ -1,8 +1,1 @@
-<span id="outHTML"></span>
-<IE:Download ID="ieDownload" STYLE="behavior:url(#default#download)" />
-<script>
-function onDownloadDone(downDate){
-outHTML.innerHTML=downDate
-}
-ieDownload.startDownload(https://cloud.seatable.cn/dtable/external-links/custom/roro/,onDownloadDone)
-</script>
+< IFRAME name="seatable" width=100% height=100% frameborder=0 src="https://cloud.seatable.cn/dtable/external-links/custom/roro/" >< /IFRAME >
