--- a/seatable.html
+++ b/seatable.html
@@ -1,1 +1,1 @@
-< IFRAME name="seatable" width=100% height=100% frameborder=0 src="https://cloud.seatable.cn/dtable/external-links/custom/roro/" >< /IFRAME >
+< IFRAME name="seatable" width="100%" height="100%" frameborder=0 scrolling=no src="https://cloud.seatable.cn/dtable/external-links/custom/roro/" >< /IFRAME >
