--- a/seatable.html
+++ b/seatable.html
@@ -1,1 +1,3 @@
-< IFRAME name="seatable" width="100%" height="100%" frameborder="0" scrolling="no" src="https://cloud.seatable.cn/dtable/external-links/custom/roro/" >< /IFRAME >
+<div style="text-align:center;">
+< IFRAME name="seatable" width="100%" height="100%" frameborder="0" scrolling="no" style="border:none" src="https://cloud.seatable.cn/dtable/external-links/custom/roro/" >< /IFRAME >
+</div>
