--- a/cheerio/cheerio.html
+++ b/cheerio/cheerio.html
@@ -30,7 +30,7 @@
 
                 let that = this
                 uni.request({
-                    url:'https://www.xiaoxues.com/yuwen/1910.html',
+                    url:'https://www.sse.net.cn/index/singleIndex?indexType=ccfi',
                     success(res) {
                         //1、_useHtmlParser2：解决parse创建dom报错
                         //2、decodeEntities：解决html方法被编码问题
