--- a/cheerio/cheerio.html
+++ b/cheerio/cheerio.html
@@ -1,7 +1,7 @@
 <template>
     <view>
-        <view class="title">测试</view>
-        <view class="content">
-            <rich-text :nodes="con">{{images}}</rich-text>
-        </view>
+        <view class="title">"测试"</view>
+        <img class="images">
+            {{images}}
+        </img>
     </view>
