--- a/cheerio/cheerio.html
+++ b/cheerio/cheerio.html
@@ -2,6 +2,6 @@
     <view>
         <view class="title">"测试"</view>
         <img class="images">
-            {{images}}
+            {images}
         </img>
     </view>
