--- a/cheerio/cheerio.html
+++ b/cheerio/cheerio.html
@@ -1,7 +1,8 @@
-<template>
+<body>
     <view>
         <view class="title">"测试"</view>
         <img class="images">
             {images}
         </img>
     </view>
+</body>
