--- a/cheerio/cheerio.html
+++ b/cheerio/cheerio.html
@@ -1,8 +1,6 @@
 <body>
     <view>
         <view class="title">"测试"</view>
-        <img class="images">
-            {images}
-        </img>
+        <img class="images">{{images}}</img>
     </view>
 </body>
