--- a/track/pk.html
+++ b/track/pk.html
@@ -1,7 +1,8 @@
-<html>
-    <head>
-        <title>巴基斯坦物流查询</title>
-    </head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>巴基斯坦物流查询</title>
+</head>
     <body>
            <div align="center">
                <iframe width="800" height="600" src="http://cx.hao-zhan.com/" scrolling="yes" hspace="0" vspace="0"></iframe> 
