--- a/track/pk.html
+++ b/track/pk.html
@@ -4,8 +4,6 @@
     <title>巴基斯坦物流查询</title>
 </head>
     <body>
-           <div align="center">
-               <iframe width=100% height=100% src="http://www.baidu.com/" scrolling="yes" hspace="0" vspace="0"></iframe> 
-           </div>
+       <iframe src="https://www.w3school.com.cn" title="W3School 在线教程"></iframe>
     </body>
 </html>
