--- a/track/pk.html
+++ b/track/pk.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>巴基斯坦物流查询</title>
 </head>
-    <body>
-       <iframe src="https://www.w3school.com.cn" title="W3School 在线教程"></iframe>
-    </body>
-</html>
+<body>
+    <iframe src="http://cx.hao-zhan.com/" title="半鸭供应链"></iframe>
+</body>
