--- a/track/pk.html
+++ b/track/pk.html
@@ -2,5 +2,5 @@
     <title>巴基斯坦物流查询</title>
 </head>
 <body>
-    <iframe src="http://cx.hao-zhan.com/" title="半鸭供应链"></iframe>
+    <iframe src="http://cx.hao-zhan.com/" width="100%" height="100%" title="半鸭供应链"></iframe>
 </body>
