--- a/track/pk.html
+++ b/track/pk.html
@@ -2,5 +2,5 @@
     <title>巴基斯坦物流查询</title>
 </head>
 <body>
-    <iframe src="http://cx.hao-zhan.com/" width="100%" height="100%" title="半鸭供应链"></iframe>
+    <iframe src="http://cx.hao-zhan.com/" width="100%" height="100%" frameborder="0" style="background: url(http://cx.hao-zhan.com/upload/31/50cebd7af588c082253fcb4d53e557.jpg) no-repeat center top; height: 600px;" title="半鸭供应链"></iframe>
 </body>
