--- a/track/pk.html
+++ b/track/pk.html
@@ -2,5 +2,5 @@
     <title>半鸭供应链查询</title>
 </head>
 <body>
-    <iframe src="http://cx.hao-zhan.com/" width="100%" height="100%" frameborder="0" title="巴基斯坦"></iframe>
+    <iframe id="document.querySelector("head")" src="http://cx.hao-zhan.com/" width="100%" height="100%" frameborder="0" title="巴基斯坦"></iframe>
 </body>
