--- a/track/pk.html
+++ b/track/pk.html
@@ -1,6 +1,3 @@
 <head>
-    <title>半鸭供应链查询</title>
+    <script src="http://cx.hao-zhan.com/">半鸭供应链</script>
 </head>
-<body>
-    <iframe class="  pace-done" src="http://cx.hao-zhan.com/" width="100%" height="100%" frameborder="0" title="巴基斯坦"></iframe>
-</body>
