--- a/track/pk.html
+++ b/track/pk.html
@@ -1,4 +1,4 @@
 <head>
-    <title>test</title>
-    <iframe src="http://cx.hao-zhan.com/" width="100%" height="100%" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="yes">test</iframe>
+    <title>test1</title>
+    <iframe src="http://cx.hao-zhan.com/?type=1&waybill_no=HZPX2407064" width="100%" height="100%" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="yes">test</iframe>
 </head>
