--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <style type="text/css">
 #top {
 	height: 86px;
-	width: 886px;
+	width: 100%;
 }
 #mid {
 	height: 170px;
-	width: 886px;
+	width: 100%;
 	background-attachment: scroll;
 	background-repeat: no-repeat;
 	background-position: right center;
@@ -30,7 +30,7 @@
 }
 #bottom {
 	height: auto;
-	width: 886px;
+	width: 100%;
 	position: relative;
 	z-index: auto;
 	top: 15px;
@@ -116,7 +116,7 @@
 #copyright {
 	font-size: 9px;
 	height: auto;
-	width: 886px;
+	width: 100%;
 }
 #table2_22 {
 	border-top-width: medium;
@@ -159,7 +159,7 @@
 #mid4 {
 	background-color: #39C;
 	height: auto;
-	width: 886px;
+	width: 100%;
 	position: relative;
 	top: 15px;
 	bottom: 10px;
@@ -169,14 +169,14 @@
 }
 #mid1 {
 	height: auto;
-	width: 886px;
+	width: 100%;
 	position: relative;
 	top: 0px;
 	bottom: 25px;
 }
 #mid2 {
 	height: auto;
-	width: 886px;
+	width: 100%;
 	top: 10px;
 	bottom: 25px;
 	position: relative;
@@ -185,7 +185,7 @@
 }
 #mid3 {
 	height: auto;
-	width: 886px;
+	width: 100%;
 	position: relative;
 	z-index: 0;
 	text-align: left;
